[FIX] web: Long text in row overlap with header titles.
When you have long text in any row and print the report, header title of the
table will overlap with the long text itself.

Example: Long description of the product in Sale order Line overlaps titles in
PDF reports.

Actually this is wkhtmltopdf specific issue and its been raised by many users.
refer following link,
https://github.com/wkhtmltopdf/wkhtmltopdf/issues/1770#issuecomment-63168472

With this commit, we are restricting to display the header again in the next
page if table is long enough to display in the next page.

Task : 2231874

--- a/addons/web/static/src/scss/report.scss
+++ b/addons/web/static/src/scss/report.scss
@@ -18,6 +18,9 @@ body {
 
 /* See https://github.com/wkhtmltopdf/wkhtmltopdf/issues/1524 */
 .table-sm {
+    > thead, > tfoot {
+        display: table-row-group !important;
+    }
     > thead > tr > th {
         border-bottom: none !important;
     }
